--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">Sunshine_my</string>
+    <string name="app_name">Prognoza</string>
     <string name="action_settings">Settings</string>
     <string name="menu_refresh">Refresh</string>
+    <string name="title_activity_detail">DetailActivity</string>
 </resources>
